# perfmon_plugin

./: CMakeLists.txt  README.md
cmake/: check-cxx-flag.cmake
include/: configuration.h  connector_instance.h  dbagent_instance.h  dbproxy_instance.h  mmf.h  network_instance.h  npc_instance.h  provider.h  user_instance.h  zone_instance.h
setup/: ReadMe.txt  install.bat
setup/perfmon/connector/: perfconnector.Ini  perfconnector.reg
setup/perfmon/dbproxy/: perfdbproxy.Ini  perfdbproxy.Reg
setup/perfmon/network/: CounterOffsets.h  perfnetwork.Ini  perfnetwork.reg
setup/perfmon/npc/: CounterOffsets.h  perfnpc.Ini  perfnpc.Reg
setup/perfmon/user/: perfuser.Ini  perfuser.Reg
setup/perfmon/zone/: perfzone.Ini  perfzone.Reg
src/: CMakeLists.txt  perfmon_plugin.def  provider.cpp
